Introduce a T_OBJECT simple type.